# devonix

./: .gitignore
backend/: README.md  agent.py  env  main.py  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx
